[package]
name = "rml_rtmp"
description = "Rust library for handling aspects of the RTMP protocol."
version = "0.8.0"
authors = ["Matthew Shapiro <me@mshapiro.net>"]
repository = "https://github.com/KallDrexx/rust-media-libs"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "video", "streaming"]

[dependencies]
rml_amf0 = { path = "../amf0", version = "0.3.0" }
byteorder = "1.3"
bytes = "1"
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0.199", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.8"
